add-opens to suppress illegal reflective access warnings